<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/titulo_principal"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTituloNoticia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:hint="@string/hint_titulo"
            android:maxLines="1"
            android:padding="15dp" />

        <EditText
            android:id="@+id/editNoticia"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:gravity="start"
            android:hint="@string/hint_noticia"
            android:inputType="textMultiLine"
            android:padding="15dp" />

        <EditText
            android:id="@+id/editDataNoticia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:hint="@string/hint_data"
            android:maxLength="10"
            android:padding="15dp" />

        <EditText
            android:id="@+id/editAutorNoticia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:hint="@string/hint_autor"
            android:maxLines="1"
            android:padding="15dp" />

        <Button
            android:id="@+id/btPublicarNoticia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_700"
            android:padding="15dp"
            android:text="@string/txt_button_publicar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>
</ScrollView>